2000-06-09  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm (): commented out
	"merged" style because of conflict with double-column amounts.

2000-06-08  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/average-balance.scm (average-balance-renderer): 
	added a condition to catch incorrectly entered dates without crashing.

2000-06-07  Dave Peticolas  <dave@krondo.com>

	* src/engine/Query.c: fixed a "dave is an idiot" bug in cropping
	the split list.

	* src/gnome/window-register.c (gnc_register_create_menu_bar): don't
	use stock close menu -- it's for closing files not closing windows.

	* src/gnome/dialog-add.c (gnc_ui_accWindow_create_account): don't
	make an opening balance transaction.

	* src/SplitLedger.c: use value, not share amount, for debit/credit
	cells in equity registers.

	* src/gnome/dialog-utils.c (gnc_ui_install_field_strings): set the
	code even if it's blank. Auto-coding doesn't work right now.

2000-06-06  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c (LedgerTraverse): use correct argument for
	exact_cell to gnc_table_find_valid_cell_horiz.
	(LedgerMoveCursor): ditto.

	* src/register/splitreg.c (xaccInitSplitRegister): Don't blank
	zeros in the price cell.

	* src/guile/gfec.c: fix bugs in usage of internal guile functions.
	more cleanup.

2000-06-05  Dave Peticolas  <dave@krondo.com>

	* src/register/splitreg.c (xaccInitSplitRegister): use higher
	precision for stock prices.

	* src/<lots>: moved gui-dependent definitions from
	src/engine/gnc-common.h to src/engine/gnc-ui-common.h.
	Use guint32 instead of home-grown typedef. This touched
	many files.

	* src/guile/guile-util.c (gnc_get_debit_string): make sure to
	return a malloc'd string.

	* src/register/splitreg.c (configLabels): check for NULL strings
	from the label getters.

	* src/gnome/window-register.c (gnc_register_date_window): if 'show
	all transactions' is not set in the preferences, limit it to